# vanna

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CONSOLE_CHAT_README.md  CONTRIBUTING.md  CUSTOM_SYSTEM_PROMPTS.md  Dockerfile  HOW_TO_RUN_LOCALLY.md  LICENSE  MIGRATION_GUIDE.md  Makefile  QUICKSTART.md  README.md  SCHEMA_DISCOVERY_EXPLAINED.md  SINGLE_TABLE_USAGE.md  TRAINING_IN_VANNA_V2.md  USING_YOUR_OWN_DATABASE.md  azure.yaml  console_chat_app.py  console_chat_app_custom_prompt.py  console_chat_app_single_table.py  console_chat_app_with_schema.py  creds.json  custom_example.py  entrypoint.py  example.sql  main.py  mkdocs.yml  pyproject.toml  quickstart.py  readmex  requirements.txt  run_openai.py  run_vanna_example.py  setup.cfg  setup_demo.sh  setup_training_data.py  tester_scripts.py  tox.ini
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: azure-deploy.yml  ci.yml  deploy.yml  flake8.yml  python-publish.yaml  run-notebooks.yml  tests.yml
1160130875fda081/: query_results_134465b0.csv  query_results_73f6dab4.csv  query_results_8613fa3f.csv  query_results_8fee36b4.csv  query_results_ab725dc2.csv
973dfe463ec85785/: query_results_86d20436.csv
adk/: CONCURRENCY_GUIDE.md  VANNA_LEARNING_GUIDE.md  VANNA_STAFFING_INTEGRATION.md  example_staffing_query.py  init_staffing_db.py
adk/agent/: agent.py  staffing_agent_instructions.md  tools.py  tools_vanna_new.py  utils.py  vanna_agent_manager.py
demo-data/: create_urban_eats_db.py
docs/: CNAME  databases.md  getting-started.md  index.html  index.md  intro-to-vanna.md  jupyter.md  onboarding.md  pricing.md  reference.md  search.js  sidebar.py  sidebar.yaml  slack.md  slides.html  streamlit.md  support.md  vanna-py-overview.md  vanna.html  workflow.md
docs/notebooks/: vn-ask.md  vn-full.md  vn-starter.md  vn-train.md  vn-training.md
docs/stylesheets/: extra.css
docs/vanna/: types.html
examples/: app_evaluation.py  chromadb_gpu_example.py  evaluations.md  transform_args_example.py
frontends/tecknoworks-chat/: ATTRIBUTIONS.md  INTEGRATION_PLAN.md  README.md  index.html  package.json  postcss.config.mjs  tsconfig.json  vite.config.ts
frontends/tecknoworks-chat/guidelines/: Guidelines.md
frontends/tecknoworks-chat/src/: main.tsx
frontends/webcomponent/: TEST_README.md  package-lock.json  package.json  requirements-test.txt  test-comprehensive.html  test_backend.py  tsconfig.json  vite.config.ts
frontends/webcomponent/.storybook/: main.ts  preview-head.html  preview.ts
frontends/webcomponent/scripts/: sync-version.js
frontends/webcomponent/src/: index.ts  vite-env.d.ts
infra/: abbreviations.json  main.bicep  main.parameters.json
infra/modules/: application-insights.bicep  azure-openai.bicep  container-app.bicep  container-apps-environment.bicep  container-registry.bicep  key-vault.bicep  log-analytics.bicep  managed-identity.bicep
nb-theme/: conf.json  index.html.j2
nb-theme/static/: custom_theme.css
notebooks/: app.ipynb  bigquery-mistral-chromadb.ipynb  bigquery-mistral-marqo.ipynb  bigquery-mistral-other-vectordb.ipynb  bigquery-mistral-vannadb.ipynb  bigquery-openai-azure-chromadb.ipynb  bigquery-openai-azure-marqo.ipynb  bigquery-openai-azure-other-vectordb.ipynb  bigquery-openai-azure-vannadb.ipynb  bigquery-openai-standard-chromadb.ipynb  bigquery-openai-standard-marqo.ipynb  bigquery-openai-standard-other-vectordb.ipynb  bigquery-openai-standard-vannadb.ipynb  bigquery-openai-vanna-chromadb.ipynb  bigquery-openai-vanna-marqo.ipynb  bigquery-openai-vanna-other-vectordb.ipynb  bigquery-openai-vanna-vannadb.ipynb  bigquery-other-llm-chromadb.ipynb  bigquery-other-llm-marqo.ipynb  bigquery-other-llm-other-vectordb.ipynb  bigquery-other-llm-vannadb.ipynb  connect-to-bigquery.ipynb  connect-to-postgres.ipynb  connect-to-snowflake.ipynb  databases.ipynb  getting-started.ipynb  index.ipynb  local.ipynb  manual-train.ipynb  other-database-mistral-chromadb.ipynb  other-database-mistral-marqo.ipynb  other-database-mistral-other-vectordb.ipynb  other-database-mistral-vannadb.ipynb  other-database-openai-azure-chromadb.ipynb  other-database-openai-azure-marqo.ipynb  other-database-openai-azure-other-vectordb.ipynb  other-database-openai-azure-vannadb.ipynb  other-database-openai-standard-chromadb.ipynb  other-database-openai-standard-marqo.ipynb  other-database-openai-standard-other-vectordb.ipynb  (+82 more)
papers/: ai-sql-accuracy-2023-08-17.md
src/: .editorconfig  test_ovh_mistral.py
src/evals/benchmarks/: llm_comparison.py
src/vanna/: __init__.py  __init__.py.md  base.py  chromadb_vector.py  cli.py  exceptions.py  flask.py  local.py  logger.py  mock.py  model.py  openai_chat.py  openai_embeddings.py  remote.py  types.py  utils.py
src/vanna/ZhipuAI/: ZhipuAI_Chat.py  ZhipuAI_Chat.py.md  ZhipuAI_embeddings.py  ZhipuAI_embeddings.py.md  __init__.py.md
tests/: conftest.py  test_agent_memory.py  test_agent_memory_sanity.py  test_agents.py  test_azureopenai_llm.py  test_bison.py  test_chromadb.py  test_chromadb_persistence_fix.py  test_database_sanity.py  test_gemini_integration.py  test_graphics.py  test_imports.py  test_instantiation.py  test_legacy_adapter.py  test_llm_context_enhancer.py  test_lmstudio.py  test_lmstudio_integration.py  test_memory_tools.py  test_ollama_direct.py  test_pgvector.py  test_tool_permissions.py  test_vanna.py  test_workflow.py
tests/fixtures/: questions.json
tests/integration/: __init__.py  test_api_endpoints.py
tests/unit/: __init__.py  test_agent_unit.py
training_data/cybersyn-data-commons/: questions.json
training_data/cybersyn-financial-data/: questions.json
training_data/cybersyn-us-global-public/: questions.json
training_data/fivetran-ads-snowflake/: questions.json
training_data/sample-fraud/: questions.json
training_data/sample-imdb/: questions.json
training_data/sample-retention/: questions.json
training_data/sample-salaries/: questions.json
training_data/similarweb/: questions.json
training_data/snowflake-cost/: questions.json
training_data/tpc-h/: questions.json
(+452 files in other folders)
